fixed logo size on mobile and tablet

--- a/sass/modules/_mediaqueries.scss
+++ b/sass/modules/_mediaqueries.scss
@@ -14,7 +14,7 @@
 
 #logo
 {
-    width: 20%;
+    width: 50%;
     margin-left: 3%;
     margin-top: 8%;
     margin-bottom: 4%;
@@ -63,7 +63,7 @@
   height: 4px;
   margin-bottom: 5px;
   position: relative;
-  background: $dark-grey;
+  background: white;
   z-index: 1;
   transform-origin: 4px 0px;
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
@@ -356,7 +356,7 @@ footer ul li:nth-child(3){
 
 #logo
 {
-        width: 10%; //play around with this when you get the actual logo - same goes for other sizes
+        width: 25%;
         margin-top: 2%;
         margin-left: 4%;
        // position: relative;
